# baram-qmk-8k

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: README.md  index.html
prj/vscode/: baram-45k.code-workspace  baram-53k.code-workspace  baram-68k.code-workspace  baram-8k-60.code-workspace  baram-8k-tkl.code-workspace  baram-qmk-8k.code-workspace  lucky65-8k.code-workspace  venom-60mx-6.25u.code-workspace  venom-60mx-7u.code-workspace  venom-80mx-6.25u.code-workspace  venom-80mx-7u.code-workspace
src/: main.cpp
src/ap/: ap.cpp
src/ap/modules/qmk/: CMakeLists.txt  qmk.c  qmk.h
src/ap/modules/qmk/keyboards/baram/45k/: config.cmake  config.h  info.json  keymap.c
src/ap/modules/qmk/keyboards/baram/53k/: config.cmake  config.h  info.json  keymap.c
src/ap/modules/qmk/port/: chattering.c  chattering.h  debounce_cfg.c  debounce_cfg.h  debounce_defer_pk.c  debounce_eager_pk.c  debounce_runtime.c  debounce_runtime.h  hold_okp.c  hold_okp.h  kill_switch.c  kill_switch.h  kkuk.c  kkuk.h  matrix.c  port.h  raw_hid.c  sys_port.c  ver_port.c  version.h  via_hid.c  via_hid.h  web_hid.c
src/ap/modules/qmk/port/protocol/: host.c  host.h  report.h
src/ap/modules/qmk/quantum/: eeconfig.h  keycode_config.h  matrix.h  via.h
src/ap/modules/qmk/quantum/debounce/: sym_defer_pk.c  sym_eager_pk.c
src/bsp/: bsp.c  bsp.h
src/bsp/device/: stm32u5xx_hal_conf.h  stm32u5xx_hal_msp.c  stm32u5xx_it.c  syscalls.c  system_stm32u5xx.c
src/bsp/ldscript/: STM32U5A5ZJTXQ_FLASH.ld  STM32U5A5ZJTXQ_FLASH_BOOT.ld
src/common/: def.h
src/common/core/: util_core.c  util_core.h
src/common/hw/include/: button.h  cli.h  cli_gui.h  encoder.h  fmc.h  i2c.h  i2s.h  keys.h  loader.h  ltdc.h  mem.h  micros.h  pdm.h  sdram.h  spi.h  touch.h  ws2812.h  ymodem.h
src/common/hw/include/lcd/: st7701.h  st7701_regs.h
src/common/hw/include/touch/: ft6236.h  gt911.h
src/common/hw/src/: cli.c  cli_gui.c
src/hw/: hw.c  hw.h  hw_def.h
src/hw/driver/: button.c  eeprom.c  encoder.c  flash.c  i2c.c  keys.c  led.c  loader.c  log.c  micros.c  reset.c  rtc.c  spi.c  uart.c  ws2812.c  ymodem.c
src/hw/driver/eeprom/: eeprom_emul_conf.h  emul.c  zd24c128.c
src/hw/driver/key_scan/: pssi.c  pssi.h
src/hw/driver/scan/: mkey.c  mkey.h  pssi.c  pssi.h
src/hw/driver/usb/: usb.c  usb.h  usbd_conf.c  usbd_conf.h
src/hw/driver/usb/usb_cdc/: usbd_cdc.c  usbd_cdc.h  usbd_cdc_if.c  usbd_desc.c  usbd_desc.h
src/hw/driver/usb/usb_cmp/: usbd_cmp.c  usbd_cmp.h  usbd_desc.c  usbd_desc.h
src/hw/driver/usb/usb_hid/: usbd_desc.c  usbd_desc.h  usbd_hid.c  usbd_hid.h
src/lib/ST/EEPROM_Emul/Core/: eeprom_emul.c
src/lib/ST/EEPROM_Emul/Porting/STM32U5/: flash_interface.c  flash_interface.h
src/lib/ST/STM32U5xx_HAL_Driver/Src/: stm32u5xx_hal_dma_ex.c
src/lib/ST/STM32_USB_Device_Library/Core/Src/: usbd_core.c  usbd_ctlreq.c
tools/: build_venom.py  gen_layout.py
tools/uf2/: uf2conv.py
(+59 files in other folders)
